KikoV: fix a bug on IExplorer, Blue background

--- a/gforge/www/themes/lite/css/theme.css
+++ b/gforge/www/themes/lite/css/theme.css
@@ -6,7 +6,6 @@ div.header {
 }
 
 div.menu {
-	background-color: blue;
 }
 
 div.union_menu {
